--- a/ZwajApp.Api/appsettings.json
+++ b/ZwajApp.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings":{
+    "Token":"Mahmoud Kamal"
+  },
   "ConnectionStrings":{
     "DefaultConnection":"Data Source = ZawajApp.db"
   },
